--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       gtag("config", "G-4DS1Q4CW96");
     </script>
     <style>
-      .w-webflow-badge{
+      .w-webflow-badge {
         display: none !important;
       }
     </style>
@@ -85,7 +85,7 @@
   <body class="body">
     <div
       data-w-id="82241d14-66ef-6611-38b3-366e1ed8fb3a"
-      style="display:flex;opacity:1"
+      style="display: flex; opacity: 1"
       class="pre-loader"
     >
       <div
@@ -205,7 +205,11 @@
               loading="lazy"
               alt=""
               sizes="(max-width: 1000px) 100vw, 1000px"
-              srcset="images/channels4_profile-p-500.jpg 500w, images/channels4_profile-p-800.jpg 800w, images/channels4_profile.jpg 1000w"
+              srcset="
+                images/channels4_profile-p-500.jpg  500w,
+                images/channels4_profile-p-800.jpg  800w,
+                images/channels4_profile.jpg       1000w
+              "
               class="image-9"
             />
           </div>
@@ -235,7 +239,11 @@
               loading="lazy"
               alt=""
               sizes="(max-width: 1000px) 100vw, 1000px"
-              srcset="images/channels4_profile-1-p-500.jpg 500w, images/channels4_profile-1-p-800.jpg 800w, images/channels4_profile-4.jpg 1000w"
+              srcset="
+                images/channels4_profile-1-p-500.jpg  500w,
+                images/channels4_profile-1-p-800.jpg  800w,
+                images/channels4_profile-4.jpg       1000w
+              "
               class="image-9"
             />
           </div>
@@ -251,7 +259,11 @@
               loading="lazy"
               alt=""
               sizes="(max-width: 1000px) 100vw, 1000px"
-              srcset="images/unnamed_1-p-500.jpg 500w, images/unnamed_1-p-800.jpg 800w, images/unnamed_1.jpg 1000w"
+              srcset="
+                images/unnamed_1-p-500.jpg  500w,
+                images/unnamed_1-p-800.jpg  800w,
+                images/unnamed_1.jpg       1000w
+              "
               class="image-9"
             />
           </div>
@@ -267,7 +279,11 @@
               loading="lazy"
               alt=""
               sizes="(max-width: 1000px) 100vw, 1000px"
-              srcset="images/channels4_profile-1_1-p-500.jpg 500w, images/channels4_profile-1_1-p-800.jpg 800w, images/channels4_profile-1_1.jpg 1000w"
+              srcset="
+                images/channels4_profile-1_1-p-500.jpg  500w,
+                images/channels4_profile-1_1-p-800.jpg  800w,
+                images/channels4_profile-1_1.jpg       1000w
+              "
               class="image-9"
             />
           </div>
@@ -283,7 +299,11 @@
               loading="lazy"
               alt=""
               sizes="(max-width: 1000px) 100vw, 1000px"
-              srcset="images/unnamed-p-500.jpg 500w, images/unnamed-p-800.jpg 800w, images/unnamed.jpg 1000w"
+              srcset="
+                images/unnamed-p-500.jpg  500w,
+                images/unnamed-p-800.jpg  800w,
+                images/unnamed.jpg       1000w
+              "
               class="image-9"
             />
           </div>
@@ -301,7 +321,11 @@
               loading="lazy"
               alt=""
               sizes="(max-width: 1000px) 100vw, 1000px"
-              srcset="images/channels4_profile-p-500.jpg 500w, images/channels4_profile-p-800.jpg 800w, images/channels4_profile.jpg 1000w"
+              srcset="
+                images/channels4_profile-p-500.jpg  500w,
+                images/channels4_profile-p-800.jpg  800w,
+                images/channels4_profile.jpg       1000w
+              "
               class="image-9"
             />
           </div>
@@ -331,7 +355,11 @@
               loading="lazy"
               alt=""
               sizes="(max-width: 1000px) 100vw, 1000px"
-              srcset="images/channels4_profile-1-p-500.jpg 500w, images/channels4_profile-1-p-800.jpg 800w, images/channels4_profile-4.jpg 1000w"
+              srcset="
+                images/channels4_profile-1-p-500.jpg  500w,
+                images/channels4_profile-1-p-800.jpg  800w,
+                images/channels4_profile-4.jpg       1000w
+              "
               class="image-9"
             />
           </div>
@@ -347,7 +375,11 @@
               loading="lazy"
               alt=""
               sizes="(max-width: 1000px) 100vw, 1000px"
-              srcset="images/unnamed_1-p-500.jpg 500w, images/unnamed_1-p-800.jpg 800w, images/unnamed_1.jpg 1000w"
+              srcset="
+                images/unnamed_1-p-500.jpg  500w,
+                images/unnamed_1-p-800.jpg  800w,
+                images/unnamed_1.jpg       1000w
+              "
               class="image-9"
             />
           </div>
@@ -363,7 +395,11 @@
               loading="lazy"
               alt=""
               sizes="(max-width: 1000px) 100vw, 1000px"
-              srcset="images/channels4_profile-1_1-p-500.jpg 500w, images/channels4_profile-1_1-p-800.jpg 800w, images/channels4_profile-1_1.jpg 1000w"
+              srcset="
+                images/channels4_profile-1_1-p-500.jpg  500w,
+                images/channels4_profile-1_1-p-800.jpg  800w,
+                images/channels4_profile-1_1.jpg       1000w
+              "
               class="image-9"
             />
           </div>
@@ -379,7 +415,11 @@
               loading="lazy"
               alt=""
               sizes="(max-width: 1000px) 100vw, 1000px"
-              srcset="images/unnamed-p-500.jpg 500w, images/unnamed-p-800.jpg 800w, images/unnamed.jpg 1000w"
+              srcset="
+                images/unnamed-p-500.jpg  500w,
+                images/unnamed-p-800.jpg  800w,
+                images/unnamed.jpg       1000w
+              "
               class="image-9"
             />
           </div>
@@ -397,7 +437,11 @@
               loading="lazy"
               alt=""
               sizes="(max-width: 1000px) 100vw, 1000px"
-              srcset="images/channels4_profile-p-500.jpg 500w, images/channels4_profile-p-800.jpg 800w, images/channels4_profile.jpg 1000w"
+              srcset="
+                images/channels4_profile-p-500.jpg  500w,
+                images/channels4_profile-p-800.jpg  800w,
+                images/channels4_profile.jpg       1000w
+              "
               class="image-9"
             />
           </div>
@@ -427,7 +471,11 @@
               loading="lazy"
               alt=""
               sizes="(max-width: 1000px) 100vw, 1000px"
-              srcset="images/channels4_profile-1-p-500.jpg 500w, images/channels4_profile-1-p-800.jpg 800w, images/channels4_profile-4.jpg 1000w"
+              srcset="
+                images/channels4_profile-1-p-500.jpg  500w,
+                images/channels4_profile-1-p-800.jpg  800w,
+                images/channels4_profile-4.jpg       1000w
+              "
               class="image-9"
             />
           </div>
@@ -443,7 +491,11 @@
               loading="lazy"
               alt=""
               sizes="(max-width: 1000px) 100vw, 1000px"
-              srcset="images/unnamed_1-p-500.jpg 500w, images/unnamed_1-p-800.jpg 800w, images/unnamed_1.jpg 1000w"
+              srcset="
+                images/unnamed_1-p-500.jpg  500w,
+                images/unnamed_1-p-800.jpg  800w,
+                images/unnamed_1.jpg       1000w
+              "
               class="image-9"
             />
           </div>
@@ -459,7 +511,11 @@
               loading="lazy"
               alt=""
               sizes="(max-width: 1000px) 100vw, 1000px"
-              srcset="images/channels4_profile-1_1-p-500.jpg 500w, images/channels4_profile-1_1-p-800.jpg 800w, images/channels4_profile-1_1.jpg 1000w"
+              srcset="
+                images/channels4_profile-1_1-p-500.jpg  500w,
+                images/channels4_profile-1_1-p-800.jpg  800w,
+                images/channels4_profile-1_1.jpg       1000w
+              "
               class="image-9"
             />
           </div>
@@ -475,7 +531,11 @@
               loading="lazy"
               alt=""
               sizes="(max-width: 1000px) 100vw, 1000px"
-              srcset="images/unnamed-p-500.jpg 500w, images/unnamed-p-800.jpg 800w, images/unnamed.jpg 1000w"
+              srcset="
+                images/unnamed-p-500.jpg  500w,
+                images/unnamed-p-800.jpg  800w,
+                images/unnamed.jpg       1000w
+              "
               class="image-9"
             />
           </div>
@@ -592,6 +652,7 @@
       </div>
     </section>
     <section class="yt-embed-wrapper">
+      <!-- 1 -->
       <div
         data-src="https://www.youtube.com/embed/7Mq4HdSOY_E?si=y50RfdT3ArXIE-Z0"
         id="w-node-_82c446cf-babe-6fe5-1422-7fa29de3d629-3378b9bd"
@@ -608,6 +669,23 @@
           allowfullscreen=""
         ></iframe>
       </div>
+      <!-- 2 -->
+      <div
+        data-src="https://www.youtube.com/embed/mMYUQuczgFY?si=CgORFbXtAkesKxqC"
+        class="youtube-embed w-embed w-iframe"
+      >
+        <iframe
+          width="100%"
+          height="100%"
+          src="https://www.youtube.com/embed/lRVSNdzt9bI?si=XVZqqTGWcb1sstoL"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen=""
+        ></iframe>
+      </div>
+      <!-- 3 -->
       <div
         data-src="https://www.youtube.com/embed/ggzvDkixx7E?si=i7cSOMil2y4_5BtE"
         class="youtube-embed w-embed w-iframe"
@@ -623,8 +701,9 @@
           allowfullscreen=""
         ></iframe>
       </div>
+      <!-- 4 -->
       <div
-        data-src="https://www.youtube.com/embed/GEPXxDIEnTY?si=5yvSjKSWpg5QQdUg"
+        data-src="https://www.youtube.com/embed/0L6ZZxZOJNM?si=aZuUNGAiDGw_MuQC"
         class="youtube-embed w-embed w-iframe"
       >
         <iframe
@@ -638,8 +717,9 @@
           allowfullscreen=""
         ></iframe>
       </div>
+      <!-- 5 -->
       <div
-        data-src="https://www.youtube.com/embed/Ctp1AKqGYJ0?si=UXdjLEUguM_QDPJv"
+        data-src="https://www.youtube.com/embed/CKo00bfm_0w?si=r5xBQy1QH5NUC-K0"
         class="youtube-embed w-embed w-iframe"
       >
         <iframe
@@ -653,23 +733,9 @@
           allowfullscreen=""
         ></iframe>
       </div>
+      <!-- 6 -->
       <div
-        data-src="https://www.youtube.com/embed/N3XV-pmUTUw?si=e0cY_6uDN9QiGIFt"
-        class="youtube-embed w-embed w-iframe"
-      >
-        <iframe
-          width="100%"
-          height="100%"
-          src="https://www.youtube.com/embed/lRVSNdzt9bI?si=XVZqqTGWcb1sstoL"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin"
-          allowfullscreen=""
-        ></iframe>
-      </div>
-      <div
-        data-src="https://www.youtube.com/embed/HLUZqxAFWfE?si=jQvgqWiOUQTN6Jz0"
+        data-src="https://www.youtube.com/embed/z0bhqU6yzos?si=KG3lJlSw9yNTDXHx"
         class="youtube-embed w-embed w-iframe"
       >
         <iframe
